corrected nav div collapse on link click in mobile view

--- a/src/css/Packages.css
+++ b/src/css/Packages.css
@@ -26,7 +26,7 @@
     background-color: #FF7F00;
     position:absolute;
     z-index: 100;
-    top:200px;
+    top:175px;
     right: 10%;
 }
 
